# imgtowebp

./: .gitignore  README.md  README_CN.md  convert_to_webp.py  main.py  pyproject.toml  requirements.txt
src/imgtowebp/: __init__.py  cli.py  core.py
src/imgtowebp/web/: app.py
src/imgtowebp/web/templates/: index.html
webp_uploader/: app.py
webp_uploader/templates/: index.html
